1. Collection API Улучшения[#242713]